[package]
name = "wlwgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"

raw-window-handle = "0.6.2"

smithay-client-toolkit = "0.20.0"
wayland-backend = { version = "0.3.11", features = ["client_system"] }

vello = "0.5.0"
tracing = "0.1.41"

[dev-dependencies]
pollster = "0.4.0"
